src/ui/layout/overlay/snapshots/kvn_tui__ui__layout__overlay__onboarding__tests__the_omarchy_card_confirms_an_installed_plugin_snapshot.snap
---
source: src/ui/layout/overlay/onboarding.rs
expression: "snapshot_terminal(&model, APP_WINDOW_COLS, APP_WINDOW_ROWS)"
---
┌ Traffic ──────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ ↑ 0.0 KB/s  ↓ 0.0 KB/s    Total: ↑ 0.0 KB  ↓ 0.0 KB    0 connections                                          │
└───────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Profiles ─────────────────────────────────────────────┐┌ Logs ────────────────────────────────────────────────┐
│ No sources. Press p to paste a profile or subscription││                                                      │
│URL from clipboard.                                    ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                           ┌──────────────────────────────────────────────────────┐                            │
│                           │                Getting started · 7/10                │                            │
│                           │                                                      │                            │
│                           │              Set up Omarchy integration              │                            │
│                           │                                                      │                            │
│                           │ kvn is integrated with your Omarchy desktop: the     │                            │
│                           │ widget is on your bar.                               │                            │
│                           │                                                      │                            │
│                           │                      󰌑 continue                      │                            │
│                           └──────────────────────────────────────────────────────┘                            │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
└───────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────┘
 DISCONNECTED                                                                        DoH  Global    (off) never 
[113x35]
