src/ui/layout/overlay/snapshots/kvn_tui__ui__layout__overlay__onboarding__tests__without_omarchy_the_last_card_closes_a_shorter_tour.snap
---
source: src/ui/layout/overlay/onboarding.rs
expression: "snapshot_terminal(&model, APP_WINDOW_COLS, APP_WINDOW_ROWS)"
---
┌ Traffic ──────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ ↑ 0.0 KB/s  ↓ 0.0 KB/s    Total: ↑ 0.0 KB  ↓ 0.0 KB    0 connections                                          │
└───────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Profiles ─────────────────────────────────────────────┐┌ Logs ────────────────────────────────────────────────┐
│ No sources. Press p to paste a profile or subscription││                                                      │
│URL from clipboard.                                    ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                           ┌──────────────────────────────────────────────────────┐                            │
│                           │                 Getting started · 9/9                │                            │
│                           │                                                      │                            │
│                           │                    You’re all set                    │                            │
│                           │                                                      │                            │
│                           │ kvn is ready to use.                                 │                            │
│                           │                                                      │                            │
│                           │ Press ? anytime for help and Space to open settings. │                            │
│                           │                                                      │                            │
│                           │                       󰌑 finish                       │                            │
│                           └──────────────────────────────────────────────────────┘                            │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
│                                                       ││                                                      │
└───────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────┘
 DISCONNECTED                                                                        DoH  Global    (off) never 
[113x35]
